feat(phoenix-connector): Initial fork